5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1646_2449.log
== TEST (2019-04-13 17:56:13) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d!=0):
	mensagem = x
	mensagem = y
	
else:
	mensagem = 'Nao tem solucao'
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:57:50) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d!=0):
	mensagem = x;y
	
else:
	mensagem = 'Nao tem solucao'
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:59:14) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d!=0):
	mensagem = x
	y
	
else:
	mensagem = 'Nao tem solucao'
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:00:19) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d!=0):
	mensagem = x
	mensagem = y
	
else:
	mensagem = 'Nao tem solucao'
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:01:36) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d!=0):
	mensagem = x
if (a*e-b*d!=0):
	mensagem = y
	
else:
	mensagem = 'Nao tem solucao'
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:05:06) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d!=0):
	mensagem1 = x
	mensagem2 = y
	
else:
	mensagem3 = 'Nao tem solucao'
	
print(mensagem1, mensagem2, mensagem3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:07:55) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d!=0):
	mensagem = x
	mensagem = y
	
else:
	mensagem = 'Nao tem solucao'
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:11:15) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d!=0):
	mensagem = x
	mensagem += y
	
else:
	mensagem = 'Nao tem solucao'
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:27:19) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d)!=0:
	mensagem = x
	mensagem1 = y
	
else:
	mensagem = 'Nao tem solucao'
	
print(mensagem)
print(mensagem1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:27:45) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d)!=0:
	mensagem = x
	mensagem1 = y
	
else:
	mensagem = 'Nao tem solucao'
	
print(mensagem)
print(mensagem1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:30:06) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d)!=0:
	mensagem = x
	mensagem1 = y
	
else (a*e-b*d)==0:
	mensagem = 'Nao tem solucao'
	
print(mensagem)
print(mensagem1)
-- ERROR:
File "XXXX", line 15
    else (a*e-b*d)==0:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:33:03) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

if (a*e-b*d)!=0:
	mensagem = (c*e-b*f)/(a*e-b*d)
	mensagem1 = (a*f-c*d)/(a*e-b*d)
	
else:
	mensagem = 'Nao tem solucao'
	
print(mensagem)
print(mensagem1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(mensagem1)
NameError: name 'mensagem1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:34:10) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

if (a*e-b*d)!=0:
	mensagem = (c*e-b*f)/(a*e-b*d)
	mensagem = (a*f-c*d)/(a*e-b*d)
	
else:
	mensagem = 'Nao tem solucao'
	
print(mensagem)
print(mensagem1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(mensagem1)
NameError: name 'mensagem1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:34:31) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

if (a*e-b*d)!=0:
	mensagem = (c*e-b*f)/(a*e-b*d)
	mensagem = (a*f-c*d)/(a*e-b*d)
	
else:
	mensagem = 'Nao tem solucao'
	
print(mensagem)
print(mensagem1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(mensagem1)
NameError: name 'mensagem1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:35:01) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

if (a*e-b*d)!=0:
	mensagem = (c*e-b*f)/(a*e-b*d)
	mensagem = (a*f-c*d)/(a*e-b*d)
	
else:
	mensagem = 'Nao tem solucao'
	
print(mensagem)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:35:25) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

if (a*e-b*d)!=0:
	mensagem = (c*e-b*f)/(a*e-b*d)
	mensagem = (a*f-c*d)/(a*e-b*d)
	
else:
	mensagem = 'Nao tem solucao'
	
print(mensagem)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:59:31) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

if (a*e-b*d)=0:
	mensagem = 'Nao tem solucao'
	
else:
	mensagem = (c*e-b*f)/(a*e-b*d)
	mensagem = (a*f-c*d)/(a*e-b*d)
	
print(mensagem)
-- ERROR:
File "XXXX", line 8
    if (a*e-b*d)=0:
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:59:46) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

if (a*e-b*d)==0:
	mensagem = 'Nao tem solucao'
	
else:
	mensagem = (c*e-b*f)/(a*e-b*d)
	mensagem = (a*f-c*d)/(a*e-b*d)
	
print(mensagem)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 15:56:29) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

if (a*e-b*d)==0:
	mensagem = 'Nao tem solucao'
	
else:
	mensagem = (c*e-b*f)/(a*e-b*d)
	mensagem = (a*f-c*d)/(a*e-b*d)
	
print(mensagem)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:07:30) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

if (a*e-b*d)==0:
	x = 'Nao tem solucao'
	y = 'Nao tem solycao'
	
else:
	x = (c*e-b*f)/(a*e-b*d)
	y = (a*f-c*d)/(a*e-b*d)
	
print(x)
print(y)
-- OUTPUT:
Nao tem solucao
Nao tem solycao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:07:42) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

if (a*e-b*d)==0:
	x = 'Nao tem solucao'
	y = 'Nao tem solycao'
	
else:
	x = (c*e-b*f)/(a*e-b*d)
	y = (a*f-c*d)/(a*e-b*d)
	
print(x)
print(y)
-- EXECUTION TIME:
0.19591
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
Nao tem solycao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:08:00) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

if (a*e-b*d)==0:
	x = 'Nao tem solucao'
	y = 'Nao tem solycao'
	
else:
	x = (c*e-b*f)/(a*e-b*d)
	y = (a*f-c*d)/(a*e-b*d)
	
print(x)
print(y)
-- OUTPUT:
Nao tem solucao
Nao tem solycao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:08:51) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

if (a*e-b*d)==0:
	x = 'Nao tem solucao'
	y = 'Nao tem solucao'
	
else:
	x = (c*e-b*f)/(a*e-b*d)
	y = (a*f-c*d)/(a*e-b*d)
	
print(x)
print(y)
-- EXECUTION TIME:
0.138363
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:23:06) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d)==0:
	print('Nao tem solucao')
	
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:23:22) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d)==0:
	print('Nao tem solucao')
	
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.148009
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-08 21:25:37) 
-- CODE:
a = float(input('Digite o coeficiente a: '))
b = float(input('Digite o coeficiente b: '))
c = float(input('Digite o coeficiente c: '))
d = float(input('Digite o coeficiente d: '))
e = float(input('Digite o coeficiente e: '))
f = float(input('Digite o coeficiente f: '))

if (a*e-b*d)==0:
	print('Nao tem solucao')
	
else:
	print((c*e-b*f)/(a*e-b*d))
	print((a*f-c*d)/(a*e-b*d))
-- EXECUTION TIME:
0.695181
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
